--- a/src/styles/_project.scss
+++ b/src/styles/_project.scss
@@ -1,3 +1,7 @@
+#project {
+  padding: 10px;
+}
+
 #project-title {
   font-size: 1.5rem;
   font-family: "Lato";
@@ -5,96 +9,127 @@
   border-bottom: 1px solid #07203f;
   padding: 10px 0;
 }
-#project-container {
-  .project-item {
-    display: flex;
-    align-items: center;
-    padding: 20px 0;
-    &:nth-child(even) {
-      flex-direction: row-reverse;
-      .project-info {
-        text-align: right;
-        direction: rtl;
-        .made-with, .project-link a {
-          margin-right: 0px !important;
-          margin-left: 10px;
-        }
-      }
-    }
+
+.project-item {
+  display: flex;
+  align-items: flex-start;
+  padding: 20px 0;
+  &:nth-child(even) {
+    flex-direction: row-reverse;
     .project-info {
-      flex: 2;
-      display: flex;
-      flex-direction: column;
-      .project-name {
-        font-family: "Nunito Sans";
-        font-size: 1.2rem;
-        font-weight: 700;
-        margin: 10px 0;
-        color: #b7b90e;
-      }
-      .project-description {
-        background-color: #07203f;
-        border-radius: 5px;
-        box-shadow: 2px 4px 4px #020d1b41;
-        padding: 20px;
-        margin: 10px 0;
-        width: 110%;
-        z-index: 1;
-        font-size: 0.9rem;
-        font-family: "Lato";
-        color: #a8bbce;
-        line-height: 1.2rem;
-        
-      }
-      .project-made-with {
-        font-family: "Lato";
-        margin: 10px 0; 
-        color: #717e8b;
-        font-size: 0.9rem;
-        line-height: 1.5rem;
-        .made-with {
-          margin-right: 10px;
-        }
-      }
-      .project-link {
-        display: flex;
-        margin: 10px 0;
-        a {
-          display: flex;
-          padding: 10px;
-          background-color: #07203f;
-          border-radius: 50%;
-          color: #a8bbce;
-          margin-right: 10px;
-          transition: all 200ms ease;
-          &:hover {
-            background-color: #0a2e5a;
-          }
-        }
+      direction: rtl;
+      .made-with,
+      .project-link a {
+        margin-right: 0px !important;
+        margin-left: 10px;
       }
     }
-    .project-image {
-      flex: 3;
+  }
+}
+
+.project-info {
+  flex: 2;
+  display: flex;
+  flex-direction: column;
+  .project-name {
+    font-family: "Nunito Sans";
+    font-size: 1.2rem;
+    font-weight: 700;
+    margin: 10px 0;
+    color: #b7b90e;
+  }
+  .project-description {
+    background-color: #07203f;
+    border-radius: 5px;
+    box-shadow: 2px 4px 4px #020d1b41;
+    padding: 20px;
+    margin: 10px 0;
+    width: 110%;
+    z-index: 1;
+    font-size: 0.9rem;
+    font-family: "Lato";
+    color: #a8bbce;
+    line-height: 1.2rem;
+  }
+  .project-made-with {
+    font-family: "Lato";
+    margin: 10px 0;
+    color: #717e8b;
+    font-size: 0.9rem;
+    line-height: 1.5rem;
+    .made-with {
+      margin-right: 10px;
+    }
+  }
+  .project-link {
+    display: flex;
+    margin: 10px 0;
+    a {
       display: flex;
-      position: relative;
-      img {
-        border-radius: 5px;
-        box-shadow: 2px 4px 4px #020d1b41;
-        width: 100%;
-      }
+      padding: 10px;
+      background-color: #07203f;
+      border-radius: 50%;
+      color: #a8bbce;
+      margin-right: 10px;
+      transition: all 200ms ease;
       &:hover {
-        .image-filter {
-          opacity: 0;
-        }
-      }
-      .image-filter {
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        background-color: #05172e;
-        opacity: 0.5;
-        transition: all 300ms ease;
+        background-color: #0a2e5a;
       }
     }
+  }
+}
+
+.project-image {
+  flex: 3;
+  display: flex;
+  position: relative;
+  &:hover {
+    .image-filter {
+      opacity: 0;
+    }
+  }
+  img {
+    border-radius: 5px;
+    box-shadow: 2px 4px 4px #020d1b41;
+    width: 100%;
+  }
+  .image-filter {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: #05172e;
+    opacity: 0.5;
+    transition: all 300ms ease;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  #project {
+    padding: 20px;
+  }
+  .project-item, .project-item:nth-child(even) {
+    all: unset;
+    margin: 40px 0;
+    display: flex;
+    flex-direction: column-reverse;
+    background-color: #07203f;
+    border-radius: 5px;
+    box-shadow: 2px 4px 4px #020d1b41;
+    .project-info {
+      padding: 10px;
+      direction: ltr;
+      z-index: 1;
+      .made-with,
+      .project-link a {
+        margin: 0 10px 0 0 !important;
+      }
+    }
+    .project-description {
+      box-sizing: border-box;
+      box-shadow: unset;
+      padding: 0px;
+      width: unset;
+    }
+    
   }
 }
