--- a/src/styles/_biodata.scss
+++ b/src/styles/_biodata.scss
@@ -6,6 +6,10 @@
   padding: 0 40px;
 }
 
+#biodata-description {
+  flex: 1;
+}
+
 #intro {
   font-family: "Nunito Sans";
   font-size: 0.9rem;
@@ -17,7 +21,7 @@
   font-family: "Open Sans";
   font-size: 3rem;
   font-weight: 700;
-  margin: 20px 0;
+  margin: 10px 0;
   color: #b6bcc7;
 }
 #description {
@@ -40,6 +44,51 @@
     transition: all 300ms ease;
     &:hover {
       background-color: #1a2f4d;
+    }
+  }
+}
+
+#biodata-photo {
+  display: flex;
+  position: relative;
+  padding: 40px;
+  margin-left: 10px;
+  border: 1px solid #1a2f4d;
+  border-radius: 50%;
+  box-sizing: border-box;
+  &:hover #image-filter {
+    opacity: 0;
+  }
+  #image-filter {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #05172e;
+    border-radius: 50%;
+    opacity: 0.5;
+    transition: all 300ms ease;
+  }
+  img {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  #biodata {
+    flex-direction: column-reverse;
+    align-items: center;
+    height: auto;
+    margin: 40px 0;
+    #biodata-photo {
+      margin-bottom: 40px;
+      img {
+        width: 150px;
+        height: 150px;
+      }
     }
   }
 }
