--- a/src/styles/_biodata.scss
+++ b/src/styles/_biodata.scss
@@ -81,8 +81,12 @@
   #biodata {
     flex-direction: column-reverse;
     align-items: center;
+    justify-content: center;
     height: auto;
-    margin: 40px 0;
+    min-height: 100vh;
+    #biodata-description {
+      flex: unset;
+    }
     #biodata-photo {
       margin-bottom: 40px;
       img {
