--- a/src/styles/_biodata.scss
+++ b/src/styles/_biodata.scss
@@ -1,5 +1,6 @@
 #biodata {
-  height: 100vh;
+  min-height: 100vh;
+  height: auto;
   box-sizing: border-box;
   display: flex;
   align-items: center;
@@ -11,39 +12,38 @@
 }
 
 #intro {
-  font-family: "Nunito Sans";
+  font-family: "Lato";
   font-size: 0.9rem;
-  color: #b7b90e;
-  font-weight: bold;
+  color: var(--accent);
   letter-spacing: 0.1rem;
 }
 #name {
-  font-family: "Open Sans";
+  font-family: "Nunito Sans";
   font-size: 3rem;
   font-weight: 700;
   margin: 10px 0;
-  color: #b6bcc7;
+  color: var(--text-color);
 }
 #description {
-  font-family: "Nunito Sans";
+  font-family: "Lato";
   font-size: 1rem;
   max-width: 400px;
   margin: 20px 0;
   line-height: 1.5rem;
-  color: #90a1b3;
+  color: var(--darker-text-color);
 }
 #get-in-touch-wrapper {
   margin-top: 20px;
   display: flex;
   user-select: none;
   a {
-    border: 1px solid #b7b90e;
+    border: 1px solid var(--accent);
     border-radius: 3px;
-    color:  #b7b90e;
+    color:  var(--accent);
     padding: 10px;
     transition: all 300ms ease;
     &:hover {
-      background-color: #1a2f4d;
+      background-color: var(--darker-color);
     }
   }
 }
@@ -53,7 +53,7 @@
   position: relative;
   padding: 40px;
   margin-left: 10px;
-  border: 1px solid #1a2f4d;
+  border: 1px solid var(--darker-color);
   border-radius: 50%;
   box-sizing: border-box;
   &:hover #image-filter {
@@ -65,7 +65,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #05172e;
+    background-color: var(--bg-color);
     border-radius: 50%;
     opacity: 0.5;
     transition: all 300ms ease;
@@ -82,8 +82,6 @@
     flex-direction: column-reverse;
     align-items: center;
     justify-content: center;
-    height: auto;
-    min-height: 100vh;
     #biodata-description {
       flex: unset;
     }
