--- a/src/styles/_project.scss
+++ b/src/styles/_project.scss
@@ -5,8 +5,8 @@
 #project-title {
   font-size: 1.5rem;
   font-family: "Lato";
-  color: #a8bbce;
-  border-bottom: 1px solid #07203f;
+  color: var(--lighter-text-color);
+  border-bottom: 1px solid var(--darker-color);
   padding: 10px 0;
 }
 
@@ -36,25 +36,25 @@
     font-size: 1.2rem;
     font-weight: 700;
     margin: 10px 0;
-    color: #b7b90e;
+    color: var(--accent);
   }
   .project-description {
-    background-color: #07203f;
+    background-color: var(--darker-color);
     border-radius: 5px;
-    box-shadow: 2px 4px 4px #020d1b41;
+    box-shadow: 2px 4px 4px var(--shadow);
     padding: 20px;
     margin: 10px 0;
     width: 110%;
     z-index: 1;
     font-size: 0.9rem;
     font-family: "Lato";
-    color: #a8bbce;
+    color: var(--lighter-text-color);
     line-height: 1.2rem;
   }
   .project-made-with {
     font-family: "Lato";
     margin: 10px 0;
-    color: #717e8b;
+    color: var(--darker-text-color);
     font-size: 0.9rem;
     line-height: 1.5rem;
     .made-with {
@@ -67,13 +67,13 @@
     a {
       display: flex;
       padding: 10px;
-      background-color: #07203f;
+      background-color: var(--darker-color);
       border-radius: 50%;
       color: #a8bbce;
       margin-right: 10px;
       transition: all 200ms ease;
       &:hover {
-        background-color: #0a2e5a;
+        background-color: var(--lighter-color);
       }
     }
   }
@@ -90,14 +90,14 @@
   }
   img {
     border-radius: 5px;
-    box-shadow: 2px 4px 4px #020d1b41;
+    box-shadow: 2px 4px 4px var(--shadow);
     width: 100%;
   }
   .image-filter {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: #05172e;
+    background-color: var(--bg-color);
     opacity: 0.5;
     transition: all 300ms ease;
   }
@@ -112,9 +112,9 @@
     margin: 40px 0;
     display: flex;
     flex-direction: column-reverse;
-    background-color: #07203f;
+    background-color: var(--darker-color);
     border-radius: 5px;
-    box-shadow: 2px 4px 4px #020d1b41;
+    box-shadow: 2px 4px 4px var(--shadow);
     .project-info {
       padding: 10px;
       direction: ltr;
