small fix for article section

--- a/src/styles/_biodata.scss
+++ b/src/styles/_biodata.scss
@@ -12,20 +12,20 @@
 }
 
 #intro {
-  font-family: "Lato";
+  font-family: "Lato", sans-serif;
   font-size: 0.9rem;
   color: var(--accent);
   letter-spacing: 0.1rem;
 }
 #name {
-  font-family: "Nunito Sans";
+  font-family: "Nunito Sans", sans-serif;
   font-size: 3rem;
   font-weight: 700;
   margin: 10px 0;
   color: var(--text-color);
 }
 #description {
-  font-family: "Lato";
+  font-family: "Lato", sans-serif;
   font-size: 1rem;
   max-width: 400px;
   margin: 20px 0;
