--- a/src/styles/_index.scss
+++ b/src/styles/_index.scss
@@ -10,7 +10,7 @@
   --bg-color: #05172e;
   --darker-color: #07203f;
   --lighter-color : #0a2e5a;
-  --accent : #b7b90e;
+  --accent : #a2a50b;
   --shadow : #020d1b41;
 }
 
@@ -28,6 +28,6 @@ a, a:visited {
   max-width: 900px;
   margin: auto;
   box-sizing: border-box;
-  font-family: "Nunito Sans";
+  font-family: "Nunito Sans", sans-serif;
 }
 
