--- a/src/styles/_article.scss
+++ b/src/styles/_article.scss
@@ -1,19 +1,20 @@
 #article {
   padding: 10px;
+  margin-top: 300px;
 }
 
 #article-heading {
   font-size: 1.5rem;
-  font-family: "Lato";
+  font-family: "Lato", sans-serif;
   color: var(--lighter-text-color);
   border-bottom: 1px solid var(--darker-color);
   padding: 10px 0;
-  margin: 300px 0 40px;
+  margin: 0 0 40px;
 }
 
 #article-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
   gap: 20px;
 }
 
@@ -40,10 +41,10 @@
     color: var(--lighter-text-color);
     font-weight: bold;
     font-size: 1rem;
-    font-family: "Nunito Sans";
+    font-family: "Nunito Sans", sans-serif;
   }
   .article-excerpt {
-    font-family: "Lato";
+    font-family: "Lato", sans-serif;
     font-size: 0.9rem;
     color: var(--darker-text-color);
     padding: 20px 0;
@@ -51,12 +52,13 @@
   .read-more {
     padding: 10px 0 0;
     font-size: 0.7rem;
-    font-family: "Lato";
+    font-family: "Lato", sans-serif;
     text-align: center;
     text-transform: uppercase;
     color: var(--text-color);
     border-top: 1px solid var(--lighter-color);
     margin: 20px;
+    transition: all 300ms ease;
     &:hover {
       color: var(--darker-text-color);
     }
@@ -65,17 +67,16 @@
 
 #check-blog {
   text-align: center;
-  padding: 20px 0;
+  padding: 10px 0;
   a {
-    color: var(--text-color);
-    background-color: var(--darker-color);
-    border-radius: 5px;
+    color: var(--darker-text-color);
     padding: 10px;
     font-size: 0.8rem;
-    font-family: "Lato";
+    font-family: "Lato", sans-serif;
     transition: all 300ms ease;
     &:hover {
-      background-color: var(--lighter-color);
+      text-decoration: underline;
+      color: var(--lighter-text-color);
     }
   }
 }
@@ -83,5 +84,10 @@
 @media screen and (max-width : 700px) {
   #article {
     padding: 20px;
+  }
+  .article-wrapper {
+    &:hover {
+      transform: translateY(0);
+    }
   }
 }
