--- a/src/styles/_project.scss
+++ b/src/styles/_project.scss
@@ -4,7 +4,7 @@
 
 #project-title {
   font-size: 1.5rem;
-  font-family: "Lato";
+  font-family: "Lato", sans-serif;
   color: var(--lighter-text-color);
   border-bottom: 1px solid var(--darker-color);
   padding: 10px 0;
@@ -32,7 +32,7 @@
   display: flex;
   flex-direction: column;
   .project-name {
-    font-family: "Nunito Sans";
+    font-family: "Nunito Sans", sans-serif;
     font-size: 1.2rem;
     font-weight: 700;
     margin: 10px 0;
@@ -47,12 +47,12 @@
     width: 110%;
     z-index: 1;
     font-size: 0.9rem;
-    font-family: "Lato";
+    font-family: "Lato", sans-serif;
     color: var(--lighter-text-color);
     line-height: 1.2rem;
   }
   .project-made-with {
-    font-family: "Lato";
+    font-family: "Lato", sans-serif;
     margin: 10px 0;
     color: var(--darker-text-color);
     font-size: 0.9rem;
