--- a/src/styles/_article.scss
+++ b/src/styles/_article.scss
@@ -23,6 +23,7 @@
 }
 
 .article-wrapper {
+  flex: 1;
   background-color: var(--darker-color);
   box-shadow: 1px 2px 4px var(--shadow);
   border-radius: 5px;
