add header and footer

--- a/src/styles/_biodata.scss
+++ b/src/styles/_biodata.scss
@@ -82,6 +82,7 @@
     flex-direction: column-reverse;
     align-items: center;
     justify-content: center;
+    padding: 100px 20px;
     #biodata-description {
       flex: unset;
     }
