--- a/src/styles/_article.scss
+++ b/src/styles/_article.scss
@@ -1,6 +1,6 @@
 #article {
   padding: 10px;
-  margin-top: 300px;
+  margin: 300px 0;
 }
 
 #article-heading {
@@ -14,7 +14,7 @@
 
 #article-container {
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 20px;
 }
 
@@ -52,16 +52,17 @@
   }
   .read-more {
     padding: 10px 0 0;
-    font-size: 0.7rem;
-    font-family: "Lato", sans-serif;
-    text-align: center;
-    text-transform: uppercase;
-    color: var(--text-color);
-    border-top: 1px solid var(--lighter-color);
     margin: 20px;
-    transition: all 300ms ease;
-    &:hover {
-      color: var(--darker-text-color);
+    text-align: center;
+    a {
+      transition: all 300ms ease;
+      font-size: 0.7rem;
+      font-family: "Lato", sans-serif;
+      text-transform: uppercase;
+      color: var(--text-color);
+      &:hover {
+        color: var(--accent);
+      }
     }
   }
 }
@@ -70,14 +71,12 @@
   text-align: center;
   padding: 10px 0;
   a {
-    color: var(--darker-text-color);
+    color: var(--accent);
     padding: 10px;
     font-size: 0.8rem;
     font-family: "Lato", sans-serif;
-    transition: all 300ms ease;
     &:hover {
       text-decoration: underline;
-      color: var(--lighter-text-color);
     }
   }
 }
