--- a/src/styles/_index.scss
+++ b/src/styles/_index.scss
@@ -1,15 +1,17 @@
 @import "_biodata.scss";
 @import "_project.scss";
 @import "_article.scss";
+@import "_footer.scss";
+@import "_header.scss";
 
 * {
-  --text-color : #b6bcc7;
-  --darker-text-color : #717e8b;
-  --lighter-text-color: #a8bbce;
+  --text-color : #a5aab4;
+  --darker-text-color : #80878f;
+  --lighter-text-color: #bbcfe2;
   --bg-color: #05172e;
   --darker-color: #07203f;
   --lighter-color : #0a2e5a;
-  --accent : #a2a50b;
+  --accent : #0b93a5;
   --shadow : #020d1b41;
 }
 
@@ -24,7 +26,7 @@ a, a:visited {
 }
 
 #container {
-  max-width: 900px;
+  max-width: 1080px;
   margin: auto;
   box-sizing: border-box;
   font-family: "Nunito Sans", sans-serif;
