--- a/src/styles/_article.scss
+++ b/src/styles/_article.scss
@@ -70,13 +70,18 @@
 #check-blog {
   text-align: center;
   padding: 10px 0;
+  margin: 20px 0;
   a {
     color: var(--accent);
+    border: 1px solid var(--accent);
+    border-radius: 5px;
     padding: 10px;
+    text-transform: uppercase;
     font-size: 0.8rem;
     font-family: "Lato", sans-serif;
+    transition: all 300ms ease;
     &:hover {
-      text-decoration: underline;
+      background-color: var(--darker-color);
     }
   }
 }
