--- a/src/styles/_index.scss
+++ b/src/styles/_index.scss
@@ -3,6 +3,7 @@
 @import "_article.scss";
 @import "_footer.scss";
 @import "_header.scss";
+@import "_socialLink.scss";
 
 * {
   --text-color : #a5aab4;
@@ -11,8 +12,11 @@
   --bg-color: #05172e;
   --darker-color: #07203f;
   --lighter-color : #0a2e5a;
-  --accent : #0b93a5;
+  --accent : #1FA0C9;
   --shadow : #020d1b41;
+
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 body {
@@ -26,7 +30,7 @@ a, a:visited {
 }
 
 #container {
-  max-width: 1080px;
+  max-width: 1000px;
   margin: auto;
   box-sizing: border-box;
   font-family: "Nunito Sans", sans-serif;
