add litle fix and update config data

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -2,7 +2,7 @@ footer {
   text-align: center;
   color: var(--text-color);
   font-size: 0.8rem;
-  margin: 40px 0 20px;
+  margin: 20px 0;
   font-family: "Nunito Sans", sans-serif;
   a {
     color: var(--accent);
