--- a/src/styles/_article.scss
+++ b/src/styles/_article.scss
@@ -56,7 +56,7 @@
     }
   }
   .article-desc {
-    padding: 0 8px;
+    // padding: 0 8px;
     h3 {
       all: unset;
       color: var(--lighter-text-color);
